<resources>
    <string name="app_name">labs-RealTimeSys-Android</string>


    <string name="lab1_title">Lab 1</string>
    <string name="lab2_title">Lab 2</string>
    <string name="lab3_title">Lab 3</string>

    <string name="numb_hint">Number</string>
    <string name="deadline_hint">Deadline</string>
    <string name="iterations_hint">Iterations</string>
    <string name="rate_hint">Rate</string>
    <string name="a_hint">a</string>
    <string name="b_hint">b</string>
    <string name="c_hint">c</string>
    <string name="d_hint">d</string>
    <string name="y_hint">y</string>
    <string name="mutation_hint">Mutation</string>

    <string name="calculate_button_title">Calculate</string>

    
    <string name="res_alert_message">Result: %1$s</string>
    <string name="error_alert_message">Error! Impossible to calculate</string>



</resources>
