<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/wallpaper3">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="100dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_textField_lab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/a_hint"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="100dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/b_textField_lab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/b_hint"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="100dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_textField_lab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/c_hint"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="100dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/d_textField_lab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/d_hint"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="100dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/y_textField_lab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/y_hint"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mutation_textField_lab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mutation_hint"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/calc_button_lab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/calculate_button_title" />


</LinearLayout>